Voucher issue solved

--- a/KGERP/Views/Vouchers/RequisitionVoucherApproval.cshtml
+++ b/KGERP/Views/Vouchers/RequisitionVoucherApproval.cshtml
@@ -75,7 +75,7 @@
                                             <td style="width:30%">@Model.ChqNo @Model.ChqName</td>
                                             <th style="width:18%">Cheque Date</th>
                                             <th style="width:2%">:</th>
-                                            <td style="width:30%">@Model.ChqDate</td>
+                                            <td style="width:30%">@Model.ChqDate.Value.ToString("dd/MM/yyyy")</td>
                                         </tr>
                                         <tr>
                                             <th style="width:18%">Cost Center</th>
