--- a/KGERP/Views/Vouchers/RequisitionVoucherEntry.cshtml
+++ b/KGERP/Views/Vouchers/RequisitionVoucherEntry.cshtml
@@ -272,7 +272,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label class="form-label">Narration</label>
-                                            @Html.TextAreaFor(model => model.Narration, new { id = "txtNarration", placeholder = "Type narration here", @class = "form-control", @Readonly = "true", rows = 2 })
+                                            @Html.TextAreaFor(model => model.Narration, new { id = "txtNarration", placeholder = "Type narration here", @class = "form-control", rows = 2 })
                                             @Html.ValidationMessageFor(model => model.Narration, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
@@ -1167,7 +1167,7 @@
         });
 
         var clicks = 0;
-        $('#txtNarration, #txtParticular').on('dblclick', function (event) {
+        $('#txtParticular').on('dblclick', function (event) {
             clicks++;
             if (clicks % 2 === 1) {
                 $(this).prop("readonly", false);
