--- a/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
@@ -88,7 +88,7 @@
 
                         <hr />
 
-                        <div class="table-responsive">
+                        <div>
                             <table id="KgErpDataTable" class="table table-striped table-responsive text-center">
                                 <thead>
                                     <tr>
